--- a/templates/content/listing.html.twig
+++ b/templates/content/listing.html.twig
@@ -38,6 +38,7 @@
             'delete': 'action.delete'|trans,
             'update_all': 'action.update_all'|trans,
         }|json_encode }}"
+      :csrftoken="{{ csrf_token('bulkedit')|json_encode }}"
     ></listing-select-box>
 
     {% set filterOptions = {
